Fix logo alignment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,7 @@ a:hover {
   
   .navbar-flex-container {
     flex-direction:column;
+    align-items:start!important;
   }
 
   .navbar-text {
